test/libsolidity/errorRecoveryTests/wrong_compiler_recovers_1.sol
pragma solidity ^99.99.0;
// ----
// SyntaxError 3997: (0-25): Source file requires different compiler version (current compiler is ....
